[package]
name = "gbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"
env_logger = "0.11.1"
log = "0.4.20"
piston = "0.55.0"
piston_window = "0.131.0"
piston2d-graphics = "0.44.0"
piston2d-opengl_graphics = "0.84.0"
gfx_device_gl = "0.16.2"
image = "0.24.8"
